fix/css for dark mode

--- a/src/components/Cards/IconCard/styles.module.css
+++ b/src/components/Cards/IconCard/styles.module.css
@@ -12,15 +12,6 @@
     animation: slideIn .15s ease-in-out forwards;
 }
 
-:global(:root.dark) .iconCard {
-    background: var(--gradient);
-}
-
-:global(:root.dark) .iconCard:hover {
-    background: var(--gradient-hover);
-    border-top: 1px solid var(--highlight);
-}
-
 .iconCard:hover {
     box-shadow: var(--box-shadow-hover);
     border-top: 1px solid var(--highlight);
